# rust-webapi

./: .env  Cargo.toml  README.md  client.rest  docker-compose.yml
migrations/2021-02-08-110834_db/: down.sql  up.sql
src/: main.rs  schema.rs
src/actions/: user.rs
src/controllers/: auth.rs  user.rs
src/handlers/: auth.rs  mod.rs  user.rs
src/middleware/: auth.rs
src/models/: auth.rs  mod.rs  pagination.rs  user.rs
src/routes/: auth.rs  mod.rs  users.rs
src/test/: auth.rest  user.rest
