[package]
name = "rust-webapi"
version = "0.1.0"
authors = ["Kerem KÖKSAL <keremkoksal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix="0.10.0"
actix-web = "3"
argon2 = "0.1"
rand_core = { version = "0.6", features = ["std"] }
serde="1"
serde_json="1"
uuid={ version= "0.8.2",features = ["v4","serde"]}
futures="0.3"
diesel={version="1.4.5", features=["uuidv07", "r2d2", "postgres","chrono"] }
chrono={version="0.4.19", features=["serde"]}
dotenv="0.15.0"
jsonwebtoken="7.2.0"